edit banner text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img src="images/banner.jpg" alt="Banner" class="w-full h-auto object-cover">
             <div class="md:absolute inset-0 flex flex-col items-center justify-center text-center px-4">
                 <h1 class="text-2xl md:text-5xl text-white mb-4 md:mb-6">Welcome to Benaya Page</h1>
-                <h3 class="text-base md:text-2xl text-white mb-2 md:mb-4 transform translate-y-[-50%]">Expole my Web I Final Project!</h3>
+                <h3 class="text-base md:text-2xl text-white mb-2 md:mb-4 transform translate-y-[-50%]">Explore my Web I Final Project!</h3>
                 <div class="flex flex-col md:flex-row gap-3 md:gap-5 text-sm md:text-xl text-white">
                     <a href="#" class="hover:underline flex items-center justify-center">
                         POINT OF SALES<i class="fa-solid fa-caret-right text-sm ml-3"></i>
